# audio_transcribe

./: .gitignore  README.md  pyproject.toml
audio_transcribe/: main.py
