[tool.poetry]
name = "audio-transcribe"
version = "0.1.0"
description = ""
authors = ["Ennio Strohauer <ennio.strohauer@gmail.com>"]
readme = "README.md"

[tool.poetry.group.dev]
optional = true

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.34.0"
python-dotenv = "^1.0.1"
argparse = "^1.4.0"
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
